# SequenceFactorBenchmark

./: .gitignore  README.md  agent.md  environment.yml  pending.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
configs/: copy_all_models.yaml  copy_codec_ablation.yaml  copy_encoders_decoders.yaml  experiment.yaml  generation_default.yaml  generation_sweep_noise.yaml  generation_sweep_scale.yaml  multi_model_example.yaml  run_sweep.yaml  sanity_overfit_copy.yaml  sanity_test.yaml  single_model_example.yaml
data/results/: results.csv
data/traces/: sorting_simple_nn_20260302_073122.csv
docs/: benchmark_spec.md  parameters.md  spec_tasks.md
notebooks/: test.ipynb
src/seqfacben/: cli.py  registry.py  results.py
src/seqfacben/analysis/: __init__.py  load.py  visualize.py
src/seqfacben/generators/: random.py
src/seqfacben/losses/: __init__.py  sequence.py
src/seqfacben/manager/: task_manager.py
src/seqfacben/models/: autoencoder.py  base.py  bigru_encoder.py  gru_encoder.py  lstm_encoder.py  s4.py  simple_nn.py  transformer.py
src/seqfacben/tasks/: __init__.py  base.py  copy.py  reverse.py  sorting.py
src/sfb/: cli.py  registry.py  results.py
src/sfb/analysis/: __init__.py  load.py  visualize.py
src/sfb/generators/: base.py  random.py
src/sfb/losses/: __init__.py  sequence.py
src/sfb/manager/: task_manager.py
src/sfb/models/: __init__.py  autoencoder.py  bigru_encoder.py  bottleneck.py  codec.py  gru_encoder.py  lstm_encoder.py  s4.py  simple_nn.py  transformer.py
src/sfb/models/composed/: __init__.py  autoencoder.py  bigru.py  gru.py  lstm.py  s4d.py  simple_nn.py  transformer.py
src/sfb/models/decoders/: __init__.py  autoencoder.py  linear.py  lstm.py  mlp.py  rnn.py  transformer.py
src/sfb/models/encoders/: __init__.py  autoencoder.py  bi_lstm.py  bigru.py  gru.py  lstm.py  mlp.py  rnn.py  s4d.py  simple_nn.py  transformer.py
src/sfb/tasks/: base.py  copy.py  reverse.py  sorting.py
tests/: test_bottleneck_components.py  test_reproducibility.py  test_transformer_pe.py
