[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sfb"
version = "0.1.0"
description = "SeqFactorBench: sequence model benchmark under controlled scale, breadth, structure, and noise."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"

dependencies = [
    "PyYAML>=6.0",
    "tqdm==4.67.1",
    "spacy==3.8.11",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[dependency-groups]
dev = [
    "build>=1.0",
    "pytest>=7.0",
    "ruff>=0.4",
    "ipykernel",
]
gpu = [
    "torch>=2.0",
]

[project.scripts]
sfb = "sfb.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sfb"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }